# irrigation_system

./: main.cpp  package-lock.json
esp32-web-app/: Cargo.toml  smart-irrigation.db
esp32-web-app/src/: handlers.rs  less.rs  main.rs  models.rs  routes.rs  state.rs
rust_backend/: .gitignore  Cargo.toml
rust_backend/.sqlx/: query-2297d63e54c587036d61ed88468e94b550973af7dc6554e0c71f4e58ab42988e.json  query-890194fd25822088b8c3f3631b33475ecc4538cc08adb0cb0207d38f88df79c0.json  query-9126ac3e819658fcb0b03976b9396b5f34b3d5742611b8274b402c4b5b2b4a14.json  query-a7de127bc58141bcb1dfb90a219c732b917aa46ab1c17e74e60cec9f2ff3a2ff.json  query-dae628630456858626f3bc9865a4ea7f9cfed43cfcd772aee9605a1c0f2ece74.json
rust_backend/migrations/: 20240803205945_init.down.sql  20240803205945_init.up.sql
rust_backend/src/: db.rs  first.rs  handlers.rs  index.html  main.rs  models.rs  routes.rs  state.rs
smart-irrigation-frontend/: package-lock.json  package.json
smart-irrigation-frontend/src/: App.css  App.js
