[package]
name = "esp32-web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-async-std-native-tls", "macros", "sqlite"] }
syn = { version = "2.0.72", features = ["clone-impls", "derive", "full", "parsing", "printing", "visit", "visit-mut"] }
actix-cors = "0.6"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
