[package]
name = "esp32-web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
actix-cors = "0.6"
serde_derive = "1.0"
serde_json = "1.0"
sqlx = { version = "0.7.1", features = ["tls-native-tls", "runtime-async-std", "postgres", "chrono", "uuid"] }
log = "0.4"
env_logger = "0.9"
